media max-width setting removed from css so that in mobile/small screen mode the body content is not cut off by the fixed navbar

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,14 +3,6 @@ body {
   padding-top: 60px;
   background-image: url(/static/img/paper.png);
 }
-@media (max-width: 979px) {
-  body {
-    padding-top: 0px;
-  }
-}
-body {
-  
-}
 #map {
 height: 600px;
 }
